--- a/Simulation/Work_dir/simulation.srcs/sources_1/bd/DUT_IV/ui/bd_57355929.ui
+++ b/Simulation/Work_dir/simulation.srcs/sources_1/bd/DUT_IV/ui/bd_57355929.ui
@@ -10,15 +10,15 @@ preplace portBus sts_data -pg 1 -y -130 -defaultsOSRD
 preplace portBus cfg_data -pg 1 -y -130 -defaultsOSRD
 preplace inst blk_mem_gen_0 -pg 1 -lvl 2 -y -70 -defaultsOSRD
 preplace inst axis_measure_pulse_0 -pg 1 -lvl 1 -y -160 -defaultsOSRD
-preplace netloc axis_measure_pulse_0_M_AXIS 1 1 2 N -190 N
-preplace netloc axis_measure_pulse_0_overload 1 1 2 N -150 N
+preplace netloc axis_measure_pulse_0_M_AXIS 1 1 2 N -200 490
+preplace netloc axis_measure_pulse_0_overload 1 1 2 N -160 490
 preplace netloc cfg_data_1 1 0 1 N
 preplace netloc S_AXIS_1 1 0 1 N
 preplace netloc aresetn_1 1 0 1 N
 preplace netloc axis_measure_pulse_0_BRAM_PORTA 1 1 1 270
-preplace netloc axis_measure_pulse_0_sts_data 1 1 2 N -130 N
+preplace netloc axis_measure_pulse_0_sts_data 1 1 2 280 -130 N
 preplace netloc aclk_1 1 0 1 N
-levelinfo -pg 1 -10 140 370 490 -top -230 -bot 150
+levelinfo -pg 1 -10 140 390 510 -top -240 -bot 150
 ",
 }
 0
