--- a/Simulation/Work_dir/simulation.srcs/sources_1/bd/dut_4/ui/bd_effa5178.ui
+++ b/Simulation/Work_dir/simulation.srcs/sources_1/bd/dut_4/ui/bd_effa5178.ui
@@ -1,15 +1,21 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.5  2015-06-26 bk=1.3371 VDI=38 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port S_AXIS -pg 1 -y -210 -defaultsOSRD
-preplace port aclk -pg 1 -y -170 -defaultsOSRD
-preplace port M_AXIS -pg 1 -y -220 -defaultsOSRD
-preplace port aresetn -pg 1 -y -190 -defaultsOSRD
-preplace inst axis_data_fifo_0 -pg 1 -lvl 1 -y -160 -defaultsOSRD
-preplace netloc s_axis_aclk_1 1 0 1 -20
-preplace netloc S_AXIS_1 1 0 1 N
-preplace netloc axis_data_fifo_0_M_AXIS 1 1 1 N
-preplace netloc s_axis_aresetn_1 1 0 1 -10
-levelinfo -pg 1 -40 160 350 -top -260 -bot -50
+preplace port S_AXIS -pg 1 -y 40 -defaultsOSRD
+preplace port aclk -pg 1 -y 20 -defaultsOSRD
+preplace port M_AXIS -pg 1 -y 90 -defaultsOSRD
+preplace port aresetn -pg 1 -y 80 -defaultsOSRD
+preplace portBus cfg_data -pg 1 -y 100 -defaultsOSRD
+preplace inst dds_compiler_0 -pg 1 -lvl 3 -y 120 -defaultsOSRD
+preplace inst axis_register_slice_0 -pg 1 -lvl 2 -y 100 -defaultsOSRD
+preplace inst axis_variable_0 -pg 1 -lvl 1 -y 80 -defaultsOSRD
+preplace netloc cfg_data_1 1 0 1 NJ
+preplace netloc axis_variable_0_M_AXIS 1 1 1 N
+preplace netloc dds_compiler_0_M_AXIS_PHASE 1 3 1 N
+preplace netloc Net 1 0 3 20 150 250 180 NJ
+preplace netloc Net1 1 0 3 20 10 240 170 NJ
+preplace netloc axis_register_slice_0_M_AXIS 1 2 1 N
+levelinfo -pg 1 0 130 340 610 800 -top 0 -bot 200
 ",
 }
+0
