--- a/Simulation2016/I-V/I-V.srcs/sources_1/bd/DUT_IV/ui/bd_57355929.ui
+++ b/Simulation2016/I-V/I-V.srcs/sources_1/bd/DUT_IV/ui/bd_57355929.ui
@@ -4,29 +4,20 @@
 preplace port S_AXIS -pg 1 -y -170 -defaultsOSRD
 preplace port overload -pg 1 -y -140 -defaultsOSRD
 preplace port aclk -pg 1 -y -150 -defaultsOSRD
-preplace port S_AXIS_DATA -pg 1 -y 30 -defaultsOSRD
 preplace port M_AXIS -pg 1 -y -180 -defaultsOSRD
-preplace port M_AXIS_DATA -pg 1 -y 50 -defaultsOSRD
 preplace port aresetn -pg 1 -y -130 -defaultsOSRD
 preplace portBus sts_data -pg 1 -y -100 -defaultsOSRD
-preplace portBus cfg_data_1 -pg 1 -y 170 -defaultsOSRD
 preplace portBus cfg_data -pg 1 -y -110 -defaultsOSRD
-preplace inst cic_compiler_0 -pg 1 -lvl 2 -y 60 -defaultsOSRD
-preplace inst axis_variable_0 -pg 1 -lvl 1 -y 150 -defaultsOSRD
 preplace inst blk_mem_gen_0 -pg 1 -lvl 3 -y -130 -defaultsOSRD
 preplace inst axis_measure_pulse_0 -pg 1 -lvl 2 -y -120 -defaultsOSRD
-preplace netloc S_AXIS_DATA_1 1 0 2 N 30 N
-preplace netloc axis_measure_pulse_0_M_AXIS 1 2 2 510 -190 NJ
-preplace netloc cfg_data_1_1 1 0 1 N
-preplace netloc cic_compiler_0_M_AXIS_DATA 1 2 2 NJ 50 NJ
-preplace netloc axis_measure_pulse_0_overload 1 2 2 510 -70 NJ
-preplace netloc cfg_data_1 1 0 2 -50 -90 N
-preplace netloc axis_variable_0_M_AXIS 1 1 1 200
-preplace netloc S_AXIS_1 1 0 2 N -170 210
-preplace netloc aresetn_1 1 0 2 -40 -110 190
+preplace netloc axis_measure_pulse_0_M_AXIS 1 2 2 500 -190 NJ
+preplace netloc axis_measure_pulse_0_overload 1 2 2 500 -70 NJ
+preplace netloc cfg_data_1 1 0 2 N -110 100
+preplace netloc S_AXIS_1 1 0 2 N -170 130
+preplace netloc aresetn_1 1 0 2 N -130 110
 preplace netloc axis_measure_pulse_0_BRAM_PORTA 1 2 1 N
-preplace netloc axis_measure_pulse_0_sts_data 1 2 2 500 -60 NJ
-preplace netloc aclk_1 1 0 2 -30 -130 210
+preplace netloc axis_measure_pulse_0_sts_data 1 2 2 490 -60 NJ
+preplace netloc aclk_1 1 0 2 N -150 120
 levelinfo -pg 1 -70 80 360 620 760 -top -310 -bot 220
 ",
 }
