--- a/Simulation2016/I-V/I-V.srcs/sources_1/bd/DUT_IV/ui/bd_57355929.ui
+++ b/Simulation2016/I-V/I-V.srcs/sources_1/bd/DUT_IV/ui/bd_57355929.ui
@@ -1,9 +1,11 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
+preplace port M_AXIS_1 -pg 1 -y 280 -defaultsOSRD
 preplace port S_AXIS -pg 1 -y -170 -defaultsOSRD
 preplace port overload -pg 1 -y -140 -defaultsOSRD
 preplace port aclk -pg 1 -y -150 -defaultsOSRD
+preplace port S_AXIS_1 -pg 1 -y 290 -defaultsOSRD
 preplace port S_AXIS_DATA -pg 1 -y 30 -defaultsOSRD
 preplace port M_AXIS -pg 1 -y -180 -defaultsOSRD
 preplace port M_AXIS_DATA -pg 1 -y 50 -defaultsOSRD
@@ -14,20 +16,24 @@ preplace portBus cfg_data -pg 1 -y -110 -defaultsOSRD
 preplace inst cic_compiler_0 -pg 1 -lvl 2 -y 60 -defaultsOSRD
 preplace inst axis_variable_0 -pg 1 -lvl 1 -y 150 -defaultsOSRD
 preplace inst blk_mem_gen_0 -pg 1 -lvl 3 -y -130 -defaultsOSRD
-preplace inst axis_measure_pulse_0 -pg 1 -lvl 2 -y -120 -defaultsOSRD
-preplace netloc S_AXIS_DATA_1 1 0 2 N 30 N
-preplace netloc axis_measure_pulse_0_M_AXIS 1 2 2 510 -190 NJ
+preplace inst axis_measure_pulse_0 -pg 1 -lvl 2 -y -470 -defaultsOSRD
+preplace inst axis_dwidth_converter_0 -pg 1 -lvl 3 -y 320 -defaultsOSRD
+preplace inst axis_data_fifo_0 -pg 1 -lvl 2 -y 310 -defaultsOSRD
+preplace netloc axis_dwidth_converter_0_M_AXIS 1 3 1 740
+preplace netloc axis_measure_pulse_0_case_id 1 2 2 N -450 NJ
+preplace netloc axis_measure_pulse_0_M_AXIS 1 2 2 NJ -510 750
+preplace netloc S_AXIS_DATA_1 1 0 2 NJ 30 170
 preplace netloc cfg_data_1_1 1 0 1 N
 preplace netloc cic_compiler_0_M_AXIS_DATA 1 2 2 NJ 50 NJ
-preplace netloc axis_measure_pulse_0_overload 1 2 2 510 -70 NJ
-preplace netloc cfg_data_1 1 0 2 -50 -90 N
-preplace netloc axis_variable_0_M_AXIS 1 1 1 200
-preplace netloc S_AXIS_1 1 0 2 N -170 210
-preplace netloc aresetn_1 1 0 2 -40 -110 190
-preplace netloc axis_measure_pulse_0_BRAM_PORTA 1 2 1 N
-preplace netloc axis_measure_pulse_0_sts_data 1 2 2 500 -60 NJ
-preplace netloc aclk_1 1 0 2 -30 -130 210
-levelinfo -pg 1 -70 80 360 620 760 -top -310 -bot 220
+preplace netloc S_AXIS_1_1 1 0 2 NJ 290 NJ
+preplace netloc cfg_data_2 1 0 2 NJ -440 N
+preplace netloc aresetn_1 1 0 3 -80 -130 190 400 NJ
+preplace netloc axis_measure_pulse_0_BRAM_PORTA 1 2 1 500
+preplace netloc S_AXIS_2 1 0 2 NJ -500 N
+preplace netloc axis_data_fifo_0_M_AXIS 1 2 1 500
+preplace netloc axis_measure_pulse_0_sts_data 1 2 2 N -430 NJ
+preplace netloc aclk_1 1 0 3 -70 -150 180 390 NJ
+levelinfo -pg 1 -100 60 350 630 770 -top -550 -bot 410
 ",
 }
 0
